// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot no sub records 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={Object {}}
    isInvalid={false}
    isRequired={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View
      dataSet={Object {}}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View
        dataSet={Object {}}
        style={Object {}}
      >
        <View
          dataSet={Object {}}
          feedbackId="field-react-aria-generated-id-feedback"
          hasFeedbackText={true}
          hasHelpText={true}
          helpTextId="field-react-aria-generated-id-helptext"
          isDisabled={false}
          isInvalid={false}
          isReadOnly={false}
          isRequired={false}
          labelId="field-react-aria-generated-id-label"
          nativeID="field-react-aria-generated-id-label"
          setHasFeedbackText={[Function]}
          setHasHelpText={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "marginRight": 12,
            }
          }
        >
          <Text
            dataSet={Object {}}
            level={4}
            style={
              Object {
                "backgroundColor": undefined,
                "color": "#000000",
                "fontFamily": "Roboto_500Medium",
                "fontSize": 20,
                "fontStyle": undefined,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "auto",
                "textDecorationLine": undefined,
              }
            }
          >
            field-name
          </Text>
        </View>
        <View
          dataSet={Object {}}
          style={Object {}}
        />
        <View
          dataSet={Object {}}
          feedbackId="field-react-aria-generated-id-feedback"
          hasFeedbackText={true}
          hasHelpText={true}
          helpTextId="field-react-aria-generated-id-helptext"
          isDisabled={false}
          isInvalid={false}
          isReadOnly={false}
          isRequired={false}
          labelId="field-react-aria-generated-id-label"
          nativeID="field-react-aria-generated-id-feedback"
          setHasFeedbackText={[Function]}
          setHasHelpText={[Function]}
          style={
            Object {
              "marginTop": 2,
            }
          }
        >
          <Text
            dataSet={Object {}}
            level="1"
            style={
              Object {
                "backgroundColor": undefined,
                "color": "#666666",
                "fontFamily": "Roboto_400Regular",
                "fontSize": 14,
                "fontStyle": undefined,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "auto",
                "textDecorationLine": undefined,
              }
            }
          >
            field-description
          </Text>
        </View>
      </View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "height": 8,
          }
        }
      />
      <View
        dataSet={Object {}}
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          dataSet={Object {}}
          level="1"
          style={
            Object {
              "backgroundColor": undefined,
              "color": "#404040",
              "fontFamily": "Roboto_400Regular_Italic",
              "fontSize": 18,
              "fontStyle": undefined,
              "fontWeight": undefined,
              "letterSpacing": 0,
              "lineHeight": 26,
              "textAlign": "auto",
              "textDecorationLine": undefined,
            }
          }
          testID="sub-form-field-input-empty"
        >
          No entries
        </Text>
        <View
          dataSet={Object {}}
          style={Object {}}
        />
        <View
          dataSet={Object {}}
          style={Object {}}
        />
        <View
          _text={
            Object {
              "color": "lightText",
            }
          }
          accessibilityRole="button"
          accessible={true}
          collapsable={false}
          colorScheme="secondary"
          dataSet={Object {}}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onHoverIn={[Function]}
          onHoverOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#24303E",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 50,
              "paddingRight": 50,
              "paddingTop": 8,
              "width": 50,
            }
          }
          testID="sub-form-field-input-open-modal-button"
        >
          <View
            dataSet={Object {}}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              dataSet={Object {}}
              style={Object {}}
            >
              <Text
                dataSet={Object {}}
                level="1"
                style={
                  Object {
                    "backgroundColor": undefined,
                    "color": "#24303E",
                    "fontFamily": "Roboto_500Medium",
                    "fontSize": 20,
                    "fontStyle": undefined,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "auto",
                    "textDecorationLine": undefined,
                  }
                }
              >
                Add
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    _text={
      Object {
        "color": "lightText",
      }
    }
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    colorScheme="primary"
    dataSet={Object {}}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onHoverIn={[Function]}
    onHoverOut={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FF7602",
        "borderRadius": 3,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 50,
        "paddingRight": 50,
        "paddingTop": 8,
      }
    }
    testID="with-form-context-submit-button"
  >
    <View
      dataSet={Object {}}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        dataSet={Object {}}
        style={Object {}}
      >
        <Text
          dataSet={Object {}}
          level="1"
          style={
            Object {
              "backgroundColor": undefined,
              "color": "#FFFFFF",
              "fontFamily": "Roboto_500Medium",
              "fontSize": 20,
              "fontStyle": undefined,
              "fontWeight": undefined,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "auto",
              "textDecorationLine": undefined,
            }
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "display": "none",
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "scale": 1,
            },
            Object {
              "scaleX": 1,
            },
            Object {
              "scaleY": 1,
            },
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <View
        _text={
          Object {
            "color": "lightText",
          }
        }
        accessible={false}
        collapsable={false}
        dataSet={Object {}}
        focusable={true}
        importantForAccessibility="no"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onHoverIn={[Function]}
        onHoverOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgb(0, 0, 0)",
            "bottom": 0,
            "left": 0,
            "opacity": 0.3,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "scale": 1,
            },
            Object {
              "scaleX": 1,
            },
            Object {
              "scaleY": 1,
            },
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <View
        closeOnOverlayClick={true}
        dataSet={Object {}}
        pointerEvents="box-none"
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityViewIsModal={true}
          aria-modal="true"
          dataSet={Object {}}
          onAccessibilityEscape={[Function]}
          style={
            Object {
              "backgroundColor": "#f9fafb",
              "borderRadius": 8,
              "elevation": 2,
              "maxHeight": 1184,
              "maxWidth": 380,
              "overflow": "hidden",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 1.41,
              "width": "75%",
            }
          }
        >
          <View
            dataSet={Object {}}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#e5e7eb",
                "paddingBottom": 16,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 16,
              }
            }
            testID="sub-form-field-input-modal-header"
          >
            <Text
              dataSet={Object {}}
              level="1"
              style={
                Object {
                  "backgroundColor": undefined,
                  "color": "#1f2937",
                  "fontFamily": undefined,
                  "fontSize": 24,
                  "fontStyle": undefined,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 26,
                  "textAlign": "auto",
                  "textDecorationLine": undefined,
                }
              }
            >
              field-name
            </Text>
          </View>
          <RCTScrollView
            contentContainerStyle={
              Array [
                Object {},
                Object {
                  "dataSet": Object {},
                },
              ]
            }
            dataSet={Object {}}
            style={Object {}}
          >
            <View>
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "paddingBottom": 12,
                    "paddingLeft": 12,
                    "paddingRight": 12,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  dataSet={Object {}}
                  style={Object {}}
                >
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      isInvalid={false}
                      isRequired={false}
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-label"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                            "marginBottom": 2,
                            "marginRight": 12,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_500Medium",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 26,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-name-0
                        </Text>
                      </View>
                      <TextInput
                        _text={
                          Object {
                            "color": "darkText",
                          }
                        }
                        accessibilityDescribedBy="field-react-aria-generated-id-feedback field-react-aria-generated-id-helptext"
                        accessible={true}
                        allowFontScaling={true}
                        autoCompleteType="off"
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={false}
                        nativeID="field-react-aria-generated-id"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        rejectResponderTermination={true}
                        required={false}
                        secureTextEntry={false}
                        selectionColor="#1f2937"
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "borderColor": "#666666",
                              "borderRadius": 3,
                              "borderStyle": "solid",
                              "borderWidth": 1,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "lineHeight": 26,
                              "overflow": "hidden",
                              "paddingBottom": 12,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 12,
                              "width": undefined,
                            },
                            Object {},
                          ]
                        }
                        testID="text-field-input"
                        underlineColorAndroid="transparent"
                        value=""
                      />
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-feedback"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "marginTop": 2,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 14,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 20,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-description-0
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "height": 16,
                      }
                    }
                  />
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      isInvalid={false}
                      isRequired={false}
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-label"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                            "marginBottom": 2,
                            "marginRight": 12,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_500Medium",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 26,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-name-1
                        </Text>
                      </View>
                      <TextInput
                        _text={
                          Object {
                            "color": "darkText",
                          }
                        }
                        accessibilityDescribedBy="field-react-aria-generated-id-feedback field-react-aria-generated-id-helptext"
                        accessible={true}
                        allowFontScaling={true}
                        autoCompleteType="off"
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={false}
                        nativeID="field-react-aria-generated-id"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        rejectResponderTermination={true}
                        required={false}
                        secureTextEntry={false}
                        selectionColor="#1f2937"
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "borderColor": "#666666",
                              "borderRadius": 3,
                              "borderStyle": "solid",
                              "borderWidth": 1,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "lineHeight": 26,
                              "overflow": "hidden",
                              "paddingBottom": 12,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 12,
                              "width": undefined,
                            },
                            Object {},
                          ]
                        }
                        testID="text-field-input"
                        underlineColorAndroid="transparent"
                        value=""
                      />
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-feedback"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "marginTop": 2,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 14,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 20,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-description-1
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
          <View
            dataSet={Object {}}
            style={
              Object {
                "backgroundColor": "#f3f4f6",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "flex-end",
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              }
            }
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                _text={
                  Object {
                    "color": "lightText",
                  }
                }
                accessibilityRole="button"
                accessible={true}
                collapsable={false}
                colorScheme="secondary"
                dataSet={Object {}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onHoverIn={[Function]}
                onHoverOut={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#24303E",
                    "borderRadius": 3,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 50,
                    "justifyContent": "center",
                    "paddingBottom": 8,
                    "paddingLeft": 50,
                    "paddingRight": 50,
                    "paddingTop": 8,
                  }
                }
                testID="sub-form-field-input-modal-cancel-button"
              >
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    dataSet={Object {}}
                    style={Object {}}
                  >
                    <Text
                      dataSet={Object {}}
                      level="1"
                      style={
                        Object {
                          "backgroundColor": undefined,
                          "color": "#24303E",
                          "fontFamily": "Roboto_500Medium",
                          "fontSize": 20,
                          "fontStyle": undefined,
                          "fontWeight": undefined,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "auto",
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      Cancel
                    </Text>
                  </View>
                </View>
              </View>
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "width": 16,
                  }
                }
              />
              <View
                _text={
                  Object {
                    "color": "lightText",
                  }
                }
                accessibilityRole="button"
                accessible={true}
                collapsable={false}
                colorScheme="secondary"
                dataSet={Object {}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onHoverIn={[Function]}
                onHoverOut={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#24303E",
                    "borderRadius": 3,
                    "flexDirection": "row",
                    "height": 50,
                    "justifyContent": "center",
                    "paddingBottom": 8,
                    "paddingLeft": 50,
                    "paddingRight": 50,
                    "paddingTop": 8,
                  }
                }
                testID="sub-form-field-input-modal-add-button"
              >
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    dataSet={Object {}}
                    style={Object {}}
                  >
                    <Text
                      dataSet={Object {}}
                      level="1"
                      style={
                        Object {
                          "backgroundColor": undefined,
                          "color": "#FFFFFF",
                          "fontFamily": "Roboto_500Medium",
                          "fontSize": 20,
                          "fontStyle": undefined,
                          "fontWeight": undefined,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "auto",
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      Add
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`should match the snapshot sub records 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    dataSet={Object {}}
    isInvalid={false}
    isRequired={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View
      dataSet={Object {}}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View
        dataSet={Object {}}
        style={Object {}}
      >
        <View
          dataSet={Object {}}
          feedbackId="field-react-aria-generated-id-feedback"
          hasFeedbackText={true}
          hasHelpText={true}
          helpTextId="field-react-aria-generated-id-helptext"
          isDisabled={false}
          isInvalid={false}
          isReadOnly={false}
          isRequired={false}
          labelId="field-react-aria-generated-id-label"
          nativeID="field-react-aria-generated-id-label"
          setHasFeedbackText={[Function]}
          setHasHelpText={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "marginBottom": 2,
              "marginRight": 12,
            }
          }
        >
          <Text
            dataSet={Object {}}
            level={4}
            style={
              Object {
                "backgroundColor": undefined,
                "color": "#000000",
                "fontFamily": "Roboto_500Medium",
                "fontSize": 20,
                "fontStyle": undefined,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "auto",
                "textDecorationLine": undefined,
              }
            }
          >
            field-name
          </Text>
        </View>
        <View
          dataSet={Object {}}
          style={Object {}}
        />
        <View
          dataSet={Object {}}
          feedbackId="field-react-aria-generated-id-feedback"
          hasFeedbackText={true}
          hasHelpText={true}
          helpTextId="field-react-aria-generated-id-helptext"
          isDisabled={false}
          isInvalid={false}
          isReadOnly={false}
          isRequired={false}
          labelId="field-react-aria-generated-id-label"
          nativeID="field-react-aria-generated-id-feedback"
          setHasFeedbackText={[Function]}
          setHasHelpText={[Function]}
          style={
            Object {
              "marginTop": 2,
            }
          }
        >
          <Text
            dataSet={Object {}}
            level="1"
            style={
              Object {
                "backgroundColor": undefined,
                "color": "#666666",
                "fontFamily": "Roboto_400Regular",
                "fontSize": 14,
                "fontStyle": undefined,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textAlign": "auto",
                "textDecorationLine": undefined,
              }
            }
          >
            field-description
          </Text>
        </View>
      </View>
      <View
        dataSet={Object {}}
        style={
          Object {
            "height": 8,
          }
        }
      />
      <RCTScrollView
        contentContainerStyle={
          Array [
            Object {},
            Object {
              "dataSet": Object {},
            },
          ]
        }
        dataSet={Object {}}
        style={Object {}}
      >
        <View>
          <View>
            <Text
              testID="subformtable-data"
            >
              [{"sub-field-id-0":"sub-value-0-0","sub-field-id-1":"sub-value-1-0"},{"sub-field-id-0":"sub-value-0-1","sub-field-id-1":"sub-value-1-1"}]
            </Text>
            <Text
              testID="subformtable-columns"
            >
              [{"Header":"sub-field-name-0","accessor":"sub-field-id-0"},{"Header":"sub-field-name-1","accessor":"sub-field-id-1"}]
            </Text>
          </View>
        </View>
      </RCTScrollView>
      <View
        dataSet={Object {}}
        style={
          Object {
            "height": 8,
          }
        }
      />
      <View
        dataSet={Object {}}
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          dataSet={Object {}}
          style={Object {}}
        />
        <View
          _text={
            Object {
              "color": "lightText",
            }
          }
          accessibilityRole="button"
          accessible={true}
          collapsable={false}
          colorScheme="secondary"
          dataSet={Object {}}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onHoverIn={[Function]}
          onHoverOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#24303E",
              "borderRadius": 3,
              "borderStyle": "solid",
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 50,
              "paddingRight": 50,
              "paddingTop": 8,
              "width": 50,
            }
          }
          testID="sub-form-field-input-open-modal-button"
        >
          <View
            dataSet={Object {}}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              dataSet={Object {}}
              style={Object {}}
            >
              <Text
                dataSet={Object {}}
                level="1"
                style={
                  Object {
                    "backgroundColor": undefined,
                    "color": "#24303E",
                    "fontFamily": "Roboto_500Medium",
                    "fontSize": 20,
                    "fontStyle": undefined,
                    "fontWeight": undefined,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "auto",
                    "textDecorationLine": undefined,
                  }
                }
              >
                Add
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    _text={
      Object {
        "color": "lightText",
      }
    }
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    colorScheme="primary"
    dataSet={Object {}}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onHoverIn={[Function]}
    onHoverOut={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FF7602",
        "borderRadius": 3,
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingLeft": 50,
        "paddingRight": 50,
        "paddingTop": 8,
      }
    }
    testID="with-form-context-submit-button"
  >
    <View
      dataSet={Object {}}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        dataSet={Object {}}
        style={Object {}}
      >
        <Text
          dataSet={Object {}}
          level="1"
          style={
            Object {
              "backgroundColor": undefined,
              "color": "#FFFFFF",
              "fontFamily": "Roboto_500Medium",
              "fontSize": 20,
              "fontStyle": undefined,
              "fontWeight": undefined,
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "auto",
              "textDecorationLine": undefined,
            }
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "display": "none",
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "scale": 1,
            },
            Object {
              "scaleX": 1,
            },
            Object {
              "scaleY": 1,
            },
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <View
        _text={
          Object {
            "color": "lightText",
          }
        }
        accessible={false}
        collapsable={false}
        dataSet={Object {}}
        focusable={true}
        importantForAccessibility="no"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onHoverIn={[Function]}
        onHoverOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "rgb(0, 0, 0)",
            "bottom": 0,
            "left": 0,
            "opacity": 0.3,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateY": 0,
            },
            Object {
              "translateX": 0,
            },
            Object {
              "scale": 1,
            },
            Object {
              "scaleX": 1,
            },
            Object {
              "scaleY": 1,
            },
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <View
        closeOnOverlayClick={true}
        dataSet={Object {}}
        pointerEvents="box-none"
        style={
          Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityViewIsModal={true}
          aria-modal="true"
          dataSet={Object {}}
          onAccessibilityEscape={[Function]}
          style={
            Object {
              "backgroundColor": "#f9fafb",
              "borderRadius": 8,
              "elevation": 2,
              "maxHeight": 1184,
              "maxWidth": 380,
              "overflow": "hidden",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 1.41,
              "width": "75%",
            }
          }
        >
          <View
            dataSet={Object {}}
            style={
              Object {
                "borderBottomWidth": 1,
                "borderColor": "#e5e7eb",
                "paddingBottom": 16,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 16,
              }
            }
            testID="sub-form-field-input-modal-header"
          >
            <Text
              dataSet={Object {}}
              level="1"
              style={
                Object {
                  "backgroundColor": undefined,
                  "color": "#1f2937",
                  "fontFamily": undefined,
                  "fontSize": 24,
                  "fontStyle": undefined,
                  "fontWeight": undefined,
                  "letterSpacing": 0,
                  "lineHeight": 26,
                  "textAlign": "auto",
                  "textDecorationLine": undefined,
                }
              }
            >
              field-name
            </Text>
          </View>
          <RCTScrollView
            contentContainerStyle={
              Array [
                Object {},
                Object {
                  "dataSet": Object {},
                },
              ]
            }
            dataSet={Object {}}
            style={Object {}}
          >
            <View>
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "paddingBottom": 12,
                    "paddingLeft": 12,
                    "paddingRight": 12,
                    "paddingTop": 8,
                  }
                }
              >
                <View
                  dataSet={Object {}}
                  style={Object {}}
                >
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      isInvalid={false}
                      isRequired={false}
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-label"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                            "marginBottom": 2,
                            "marginRight": 12,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_500Medium",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 26,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-name-0
                        </Text>
                      </View>
                      <TextInput
                        _text={
                          Object {
                            "color": "darkText",
                          }
                        }
                        accessibilityDescribedBy="field-react-aria-generated-id-feedback field-react-aria-generated-id-helptext"
                        accessible={true}
                        allowFontScaling={true}
                        autoCompleteType="off"
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={false}
                        nativeID="field-react-aria-generated-id"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        rejectResponderTermination={true}
                        required={false}
                        secureTextEntry={false}
                        selectionColor="#1f2937"
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "borderColor": "#666666",
                              "borderRadius": 3,
                              "borderStyle": "solid",
                              "borderWidth": 1,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "lineHeight": 26,
                              "overflow": "hidden",
                              "paddingBottom": 12,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 12,
                              "width": undefined,
                            },
                            Object {},
                          ]
                        }
                        testID="text-field-input"
                        underlineColorAndroid="transparent"
                        value=""
                      />
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-feedback"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "marginTop": 2,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 14,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 20,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-description-0
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "height": 16,
                      }
                    }
                  />
                  <View
                    dataSet={Object {}}
                    style={
                      Object {
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      dataSet={Object {}}
                      isInvalid={false}
                      isRequired={false}
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-label"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                            "marginBottom": 2,
                            "marginRight": 12,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_500Medium",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 26,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-name-1
                        </Text>
                      </View>
                      <TextInput
                        _text={
                          Object {
                            "color": "darkText",
                          }
                        }
                        accessibilityDescribedBy="field-react-aria-generated-id-feedback field-react-aria-generated-id-helptext"
                        accessible={true}
                        allowFontScaling={true}
                        autoCompleteType="off"
                        dataSet={Object {}}
                        disabled={false}
                        editable={true}
                        isRequired={false}
                        nativeID="field-react-aria-generated-id"
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        placeholderTextColor="#a3a3a3"
                        readOnly={false}
                        rejectResponderTermination={true}
                        required={false}
                        secureTextEntry={false}
                        selectionColor="#1f2937"
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "borderColor": "#666666",
                              "borderRadius": 3,
                              "borderStyle": "solid",
                              "borderWidth": 1,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 18,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "lineHeight": 26,
                              "overflow": "hidden",
                              "paddingBottom": 12,
                              "paddingLeft": 12,
                              "paddingRight": 12,
                              "paddingTop": 12,
                              "width": undefined,
                            },
                            Object {},
                          ]
                        }
                        testID="text-field-input"
                        underlineColorAndroid="transparent"
                        value=""
                      />
                      <View
                        dataSet={Object {}}
                        feedbackId="field-react-aria-generated-id-feedback"
                        hasFeedbackText={true}
                        hasHelpText={true}
                        helpTextId="field-react-aria-generated-id-helptext"
                        isDisabled={false}
                        isInvalid={false}
                        isReadOnly={false}
                        isRequired={false}
                        labelId="field-react-aria-generated-id-label"
                        nativeID="field-react-aria-generated-id-feedback"
                        setHasFeedbackText={[Function]}
                        setHasHelpText={[Function]}
                        style={
                          Object {
                            "marginTop": 2,
                          }
                        }
                      >
                        <Text
                          dataSet={Object {}}
                          level="1"
                          style={
                            Object {
                              "backgroundColor": undefined,
                              "color": "#666666",
                              "fontFamily": "Roboto_400Regular",
                              "fontSize": 14,
                              "fontStyle": undefined,
                              "fontWeight": undefined,
                              "letterSpacing": 0,
                              "lineHeight": 20,
                              "textAlign": "auto",
                              "textDecorationLine": undefined,
                            }
                          }
                        >
                          sub-field-description-1
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
          <View
            dataSet={Object {}}
            style={
              Object {
                "backgroundColor": "#f3f4f6",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "flex-end",
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              }
            }
          >
            <View
              dataSet={Object {}}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                _text={
                  Object {
                    "color": "lightText",
                  }
                }
                accessibilityRole="button"
                accessible={true}
                collapsable={false}
                colorScheme="secondary"
                dataSet={Object {}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onHoverIn={[Function]}
                onHoverOut={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#24303E",
                    "borderRadius": 3,
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "height": 50,
                    "justifyContent": "center",
                    "paddingBottom": 8,
                    "paddingLeft": 50,
                    "paddingRight": 50,
                    "paddingTop": 8,
                  }
                }
                testID="sub-form-field-input-modal-cancel-button"
              >
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    dataSet={Object {}}
                    style={Object {}}
                  >
                    <Text
                      dataSet={Object {}}
                      level="1"
                      style={
                        Object {
                          "backgroundColor": undefined,
                          "color": "#24303E",
                          "fontFamily": "Roboto_500Medium",
                          "fontSize": 20,
                          "fontStyle": undefined,
                          "fontWeight": undefined,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "auto",
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      Cancel
                    </Text>
                  </View>
                </View>
              </View>
              <View
                dataSet={Object {}}
                style={
                  Object {
                    "width": 16,
                  }
                }
              />
              <View
                _text={
                  Object {
                    "color": "lightText",
                  }
                }
                accessibilityRole="button"
                accessible={true}
                collapsable={false}
                colorScheme="secondary"
                dataSet={Object {}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onHoverIn={[Function]}
                onHoverOut={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#24303E",
                    "borderRadius": 3,
                    "flexDirection": "row",
                    "height": 50,
                    "justifyContent": "center",
                    "paddingBottom": 8,
                    "paddingLeft": 50,
                    "paddingRight": 50,
                    "paddingTop": 8,
                  }
                }
                testID="sub-form-field-input-modal-add-button"
              >
                <View
                  dataSet={Object {}}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    dataSet={Object {}}
                    style={Object {}}
                  >
                    <Text
                      dataSet={Object {}}
                      level="1"
                      style={
                        Object {
                          "backgroundColor": undefined,
                          "color": "#FFFFFF",
                          "fontFamily": "Roboto_500Medium",
                          "fontSize": 20,
                          "fontStyle": undefined,
                          "fontWeight": undefined,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "auto",
                          "textDecorationLine": undefined,
                        }
                      }
                    >
                      Add
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
